[gd_scene load_steps=2 format=2]

[ext_resource path="res://Script/net.gd" type="Script" id=1]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_right = 123.0
margin_bottom = 44.0
text = "init"

[node name="OptionButton" type="OptionButton" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -53.0
margin_right = 107.0
text = "CREAT"
items = [ "PLAY", null, false, 0, null, "CREAT", null, false, 1, null ]
selected = 1

[node name="HTTPRequest1" type="HTTPRequest" parent="."]

[node name="TextEdit" type="TextEdit" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -247.0
margin_bottom = 69.0
readonly = true

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -237.0
margin_top = -384.0

[node name="TextEdit" type="TextEdit" parent="CenterContainer"]
margin_left = 118.0
margin_top = 192.0
margin_right = 118.0
margin_bottom = 192.0
text = "123456"

[node name="Button2" type="Button" parent="."]
margin_left = 2.0
margin_top = 48.0
margin_right = 124.0
margin_bottom = 95.0
text = "effect"

[node name="Button3" type="Button" parent="."]
margin_left = 1.0
margin_top = 98.0
margin_right = 127.0
margin_bottom = 144.0
text = "on"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="request_completed" from="HTTPRequest1" to="." method="_on_HTTPRequest1_request_completed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
